--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/baseColor"
+    android:id="@+id/llVideo"
     android:layout_height="match_parent"
     tools:context=".Activity.VideoActivity">
 
